# VestaEngine

./: .gitignore  CMakeLists.txt  Guide.md  README.md
assets/demo/: gaussian_schema_smoke.ply
docs/: unity-game-programmer-portfolio-vestaengine.md
include/vesta/core/: debug.h  job_system.h
include/vesta/render/: path_trace_backend.h  renderer.h
include/vesta/render/graph/: render_graph.h
include/vesta/render/passes/: composite_pass.h  deferred_lighting_pass.h  deferred_raster_pass.h  gaussian_splat_pass.h  geometry_raster_pass.h  irender_pass.h  official_gaussian_raster_pass.h  path_tracer_pass.h
include/vesta/render/resources/: resource_handles.h
include/vesta/render/rhi/: render_device.h
include/vesta/render/vulkan/: vk_context.h  vk_descriptors.h  vk_engine.h  vk_images.h  vk_initializers.h  vk_loader.h  vk_pipelines.h  vk_types.h
include/vesta/scene/: camera.h  scene.h
scripts/: build-shaders-msvc.ps1
shaders/: composite.frag  composite.vert  deferred_lighting.comp  gaussian.frag  gaussian.vert  gaussian_bin.comp  gaussian_tile.comp  geometry.frag  geometry.vert  gradient.comp  gradient_color.comp  hardcoded_triangle.frag  hardcoded_triangle.vert  official_gaussian_duplicate.comp  official_gaussian_preprocess.comp  official_gaussian_ranges.comp  official_gaussian_raster.comp  official_gaussian_scan.comp  official_gaussian_sort.comp  pathtrace.comp  pathtrace.rchit  pathtrace.rgen  pathtrace.rmiss  sky.comp
src/: CMakeLists.txt
src/app/: main.cpp
src/core/: job_system.cpp
src/render/: renderer.cpp
src/render/graph/: render_graph.cpp
src/render/passes/: composite_pass.cpp  deferred_lighting_pass.cpp  deferred_raster_pass.cpp  gaussian_splat_pass.cpp  geometry_raster_pass.cpp  official_gaussian_raster_pass.cpp  path_tracer_pass.cpp
src/render/rhi/: render_device.cpp  vma_impl.cpp
src/render/vulkan/: vk_context.cpp  vk_descriptors.cpp  vk_engine.cpp  vk_images.cpp  vk_initializers.cpp  vk_loader.cpp  vk_pipelines.cpp
src/scene/: camera.cpp  scene.cpp
src/tests/: renderer_validation_tests.cpp
